@@ -49,6 +49,7 @@ void trdos_end( void );
 
 void trdos_page( void );
 void trdos_unpage( void );
+void trdos_memory_map( void );
 
 void trdos_cr_write( libspectrum_word port, libspectrum_byte b );
 
